src/bin/loadzone/tests/error/keyerror3.db
$TTL 300
$ORIGIN com.
@			IN SOA	ns hostmaster (
				1        ; serial
				3600
				1800
				1814400
				3600
				)
			NS	ns
ns			A	127.0.0.1
$INLUDE file.txt
a			A	10.0.0.1
